--- a/Infinity/static/css/calendar/calendar.css
+++ b/Infinity/static/css/calendar/calendar.css
@@ -14,7 +14,7 @@ body {
 /* ===== Container Principal ===== */
 .calendar-container {
     max-width: 960px;
-    margin: 40px auto;
+    margin: 100px auto;
     background-color: #ffffff;
     padding: 30px 40px;
     border-radius: 12px;
@@ -51,7 +51,9 @@ body {
     background-color: #3a5b8a;
 }
 
-.btn-add-event {
+.btn-add-event{
+    margin: 20px auto;
+    max-width: 300px;
     background-color: #4caf50;
     color: white;
     padding: 0.5rem 1rem;
@@ -169,23 +171,23 @@ body {
 /* ===== Cores por Prioridade/Categoria (Desktop) ===== */
 .priority-1 {
     background-color: #ffdddd;
-    border-left: 5px solid #d32f2f;
+    border-left: 5px solid #c2b0b0;
 }
 .priority-2 {
     background-color: #e0f7fa;
-    border-left: 5px solid #0288d1;
+    border-left: 5px solid rgb(0, 104, 160);
 }
 .priority-3 {
     background-color: #fff9c4;
-    border-left: 5px solid #fbc02d;
+    border-left: 5px solid rgb(168, 131, 38);
 }
 .priority-4 {
     background-color: #dcedc8;
-    border-left: 5px solid #388e3c;
+    border-left: 5px solid #709744;
 }
 .priority-5 {
     background-color: #ede7f6;
-    border-left: 5px solid #7b1fa2;
+    border-left: 5px solid #8f6fbe;
 }
 
 /* ===== Responsivo (Mobile: 50x50 quadrados) ===== */
@@ -274,5 +276,28 @@ body {
         background-color: #7b1fa2 !important;
         color: #fff;
         border-left: none;
+    }
+}
+
+@media (max-width: 430px) {
+    .days-week {
+        gap: 4px;
+    }
+
+    .days-week span {
+        min-width: 45px;
+        max-width: 45px;
+        padding: 0;
+    }
+
+    .numbers-days {
+        gap: 4px;
+    }
+
+    .numbers-days span {
+        min-width: 45px;
+        max-width: 45px;
+        min-height: 45px;
+        max-height: 45px;
     }
 }
