--- a/Infinity/templates/base.html
+++ b/Infinity/templates/base.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{% block title %}InfinityHub{% endblock %}</title>
 
-    <link rel="icon" href="{{ url_for('static', filename='assets/images/logo.png') }}">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/body/base.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='assets/images/logo.png') }}" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/body/base.css') }}" />
     <script defer src="{{ url_for('static', filename='js/theme-toggle.js') }}"></script>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/body/header.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/body/header.css') }}" />
 
     {% block head_extra %}{% endblock %}
 </head>
