--- a/Infinity/templates/menu.html
+++ b/Infinity/templates/menu.html
@@ -4,8 +4,10 @@
 </div>
 <div class="header-right">
     <div class="theme-toggle">
-        <label for="toggle-dark" title="Alternar tema">🌗</label>
-        <input type="checkbox" id="toggle-dark">
+        <div class="theme-toggle" title="Alternar modo claro/escuro">
+            <input type="checkbox" id="toggle-dark" />
+            <label for="toggle-dark" class="slider"></label>
+        </div>
     </div>
     {% if current_user.is_authenticated %}
     <a href="{{ url_for('profile_user', username=user.username) }}" class="user-profile">
