--- a/Infinity/templates/profile.html
+++ b/Infinity/templates/profile.html
@@ -4,6 +4,7 @@
 
 {% block head_extra %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/profile/profile.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/profile/theme.css') }}">
 {% endblock %}
 
 {% block content %}
