--- a/Infinity/templates/events_day.html
+++ b/Infinity/templates/events_day.html
@@ -29,7 +29,7 @@
         <p class="sem-eventos">Nenhum evento encontrado para este dia.</p>
     {% endif %}
 
-    <a href="{{ url_for('calendar') }}" style="text-decoration: none;">Voltar Para o Calendario Pessoal</a>
+    <a href="{{ url_for('calendar') }}" style="text-decoration: none; color: rgb(133, 133, 133);">Voltar Para o Calendario Pessoal</a>
 
 </div>
 {% endblock %}
