--- a/Infinity/templates/add_event.html
+++ b/Infinity/templates/add_event.html
@@ -36,13 +36,8 @@
     </div>
 
     <div class="mb-3">
-      <label for="category" class="form-label">Categoria:</label>
+      <label for="category" class="form-label">Classificação:</label>
       {{ form.category(class="form-control") }}
-    </div>
-
-    <div class="form-check mb-3">
-      {{ form.warning(class="form-check-input") }}
-      <label for="warning" class="form-check-label">Mostrar aviso no dia do evento</label>
     </div>
 
     <button type="submit" class="btn btn-primary">Adicionar Evento</button>
