--- a/Infinity/templates/navbar.html
+++ b/Infinity/templates/navbar.html
@@ -4,10 +4,9 @@
     </div>
     <ul class="nav-links">
         <li><a href="{{ url_for('homepage') }}">Início</a></li>
-        <li><a href="#">Anotação Rápida</a></li>
+        <li><a href="{{ url_for('tasks') }}">Anotação Rápida</a></li>
         <li><a href="{{ url_for('calendar') }}">Calendário Pessoal</a></li>
-        <li><a href="#">Planilhas</a></li>
-        <li><a href="#">Notificações</a></li>
+        <li><a href="{{ url_for('file_center') }}">Planilhas</a></li>
         <li><a href="https://infinityschool.eadplataforma.app" target="_blank" rel="noopener noreferrer">Infinity App</a></li> <!-- link externo -->
 
         {% if current_user.is_authenticated %}
