--- a/Infinity/templates/navbar.html
+++ b/Infinity/templates/navbar.html
@@ -4,7 +4,8 @@
     </div>
     <ul class="nav-links">
         <li><a href="{{ url_for('homepage') }}">Início</a></li>
-        <li><a href="{{ url_for('tasks') }}">Anotação Rápida</a></li>
+        <li><a href="{{ url_for('flash_notes') }}">Anotação Rápida</a></li>
+        <li><a href="{{ url_for('tasks') }}">Tarefas</a></li>        
         <li><a href="{{ url_for('calendar') }}">Calendário Pessoal</a></li>
         <li><a href="{{ url_for('file_center') }}">Planilhas</a></li>
         <li><a href="https://infinityschool.eadplataforma.app" target="_blank" rel="noopener noreferrer">Infinity App</a></li> <!-- link externo -->
