--- a/Infinity/static/css/note/note.css
+++ b/Infinity/static/css/note/note.css
@@ -37,7 +37,7 @@
 
 /* Botão de envio */
 .note-submit {
-    margin-top: 10px;
+    margin-bottom: 30px;
     padding: 14px;
     font-size: 1rem;
     font-weight: bold;
